[fix: #165] Increase size of spacing variables

--- a/src/_globals.scss
+++ b/src/_globals.scss
@@ -32,11 +32,11 @@ $transition-duration: 150ms !default;
 @custom-media --only-large (980px < width <= 1100px);
 
 // Spacing
-$spacing-xs: 0.25lh !default;
-$spacing-s:  0.5lh !default;
-$spacing-m:  1lh !default;
-$spacing-l:  1.25lh !default;
-$spacing-xl: 1.5lh !default;
+$spacing-xs: 0.5lh !default;
+$spacing-s:  1lh !default;
+$spacing-m:  1.5lh !default;
+$spacing-l:  2lh !default;
+$spacing-xl: 2.5lh !default;
 
 
 //
